fix build error

--- a/projects/browser-extension/tsconfig.json
+++ b/projects/browser-extension/tsconfig.json
@@ -5,7 +5,7 @@
   "compilerOptions": {
     "paths": {
       "~*": ["./src/*"],
-      "@bitsky/shared": ["../shared/*"]
+      "@bitsky/shared": ["../shared"]
     },
     "baseUrl": "."
   }
