--- a/projects/api/tsconfig.json
+++ b/projects/api/tsconfig.json
@@ -30,11 +30,11 @@
     /* Specify what module code is generated. */
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
-    "baseUrl": "./",
+    "baseUrl": ".",
     /* Specify the base directory to resolve non-relative module names. */
-    "paths": {
-      "@bitsky/shared": ["../shared/*"]
-    },
+    // "paths": {
+    //   "@bitsky/shared": ["./libs/shared"]
+    // },
     /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
