close window doesn't close app, instead of it put app to run in the background

--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bi",
-  "productName": "desktop-app",
+  "productName": "bitsky",
   "version": "1.0.0",
   "private": true,
   "description": "Bookmark intelligence desktop app",
