--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,6 +72,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./projects/desktop-app/out/bi.zip
-          asset_name: "bi-${{ matrix.os }}.zip"
+          asset_path: ./projects/desktop-app/out/bitsky.zip
+          asset_name: "bitsky-${{ matrix.os }}.zip"
           asset_content_type: application/zip
