--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -41,7 +41,8 @@
     "cheerio": "^1.0.0-rc.12",
     "helmet": "^4.6.0",
     "crypto-js": "^4.1.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "meilisearch": "^0.34.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.19",
