Issue-34: add search engine (#54)
* add meilisearch

* close window doesn't close app, instead of it put app to run in the background

* fix format issue

* improve the packaging of melisearch

* fix file readonly error

* when close bitsky exit search engine

* refactor bookmarks to page

* update graphql schema

* refactor UI side

* update graphql

* update content script

* add a const value for history

* implement a basic version of search

---------

Co-authored-by: neo <shaokexu@example.com>

--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "postinstall": "npm run prisma:generate",
-    "dev": "bash ../../scripts/copy-libs.sh && dotenv -e ../../env/.env -c -- ts-node-dev --respawn --inspect --inspect-port=9229 --project ./tsconfig.json src/index.ts",
+    "dev": "bash ../../scripts/copy-libs.sh && bash ../../scripts/copy-meilisearch-to-api.sh && dotenv -e ../../env/.env -c -- ts-node-dev --respawn --inspect --inspect-port=9229 --project ./tsconfig.json src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "bash ../../scripts/build-web-app.sh",
     "prisma:generate": "dotenv -e ../../env/.env -c -- prisma generate",
@@ -41,7 +41,8 @@
     "cheerio": "^1.0.0-rc.12",
     "helmet": "^4.6.0",
     "crypto-js": "^4.1.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "meilisearch": "^0.34.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.19",
