--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -42,7 +42,8 @@
     "helmet": "^4.6.0",
     "crypto-js": "^4.1.1",
     "uuid": "^9.0.0",
-    "meilisearch": "^0.34.1"
+    "meilisearch": "^0.34.1",
+    "http-proxy-middleware": "^2.0.6"
   },
   "devDependencies": {
     "@types/node": "^18.11.19",
