--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -43,7 +43,9 @@
     "crypto-js": "^4.1.1",
     "uuid": "^9.0.0",
     "meilisearch": "^0.34.1",
-    "http-proxy-middleware": "^2.0.6"
+    "http-proxy-middleware": "^2.0.6",
+    "image-size": "^1.0.2",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@types/node": "^18.11.19",
