--- a/projects/browser-extension/package.json
+++ b/projects/browser-extension/package.json
@@ -25,7 +25,8 @@
     "antd": "^5.4.6",
     "lodash": "^4.17.21",
     "normalize-url": "^6.0.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "html2canvas": "^1.4.1"
   },
   "devDependencies": {
     "@types/chrome": "0.0.210",
