add a first work version with ui

--- a/projects/desktop-app/tsconfig.json
+++ b/projects/desktop-app/tsconfig.json
@@ -16,7 +16,7 @@
     "target": "ES6"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "src/web-app"],
+  "exclude": ["node_modules", "src/web-app", "src/ui"],
   "formatCodeOptions": {
     "indentSize": 2,
     "tabSize": 2
