--- a/env/.env.template
+++ b/env/.env.template
@@ -5,3 +5,6 @@ API_PORT=4000
 VERSION=1.0.0
 DESKTOP_MODE=4000
 DATABASE_URL=<Your-DB-URL> # "file:/Users/bitsky/bookmark-intelligence/projects/api/.bi-api/bi-api.db"
+
+# Desktop App
+DESKTOP_VITE_DEV_SERVER_URL=http://localhost:7777
