--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -69,10 +69,11 @@
     "fs-extra": "11.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "graphql": "^16.8.1",
     "@apollo/client": "^3.8.7",
-    "i18next": "^23.6.0",
-    "react-i18next": "^13.3.1",
+    "i18next": "^23.7.1",
+    "react-i18next": "^13.3.2",
     "antd": "^5.11.1"
   },
   "envars": {
