--- a/projects/ui/package.json
+++ b/projects/ui/package.json
@@ -2,6 +2,7 @@
   "name": "bi-ui",
   "private": true,
   "version": "0.0.0",
+  "license": "GPL-3.0",
   "type": "module",
   "scripts": {
     "dev": "dotenv -e ../../env/.env -c -- vite",
