--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bitsky",
-  "productName": "bitsky",
+  "name": "bitsky-desktop-app",
+  "productName": "Bitsky",
   "version": "1.0.0",
   "private": true,
   "description": "Bitsky desktop app",
@@ -22,7 +22,7 @@
   "author": {
     "name": "neo"
   },
-  "license": "MIT",
+  "license": "GPL-3.0",
   "devDependencies": {
     "@electron-forge/cli": "^6.4.2",
     "@electron-forge/maker-deb": "^6.4.2",
@@ -55,7 +55,6 @@
     "react-dom": "^18.2.0",
     "vite-plugin-electron": "^0.15.4",
     "vite-plugin-electron-renderer": "^0.14.5",
-    "dotenv": "16.3.1",
     "dotenv-cli": "7.3.0"
   },
   "dependencies": {
@@ -72,9 +71,11 @@
     "react-router-dom": "^6.18.0",
     "graphql": "^16.8.1",
     "@apollo/client": "^3.8.7",
-    "i18next": "^23.7.1",
-    "react-i18next": "^13.3.2",
-    "antd": "^5.11.1"
+    "i18next": "^23.7.3",
+    "react-i18next": "^13.4.0",
+    "antd": "^5.11.1",
+    "envalid": "^7.3.1",
+    "dotenv": "16.3.1"
   },
   "envars": {
     "cwd": "../../env"
