--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -2,7 +2,7 @@
   "name": "bi-api",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "./src/index.js",
   "private": true,
   "scripts": {
     "postinstall": "npm run prisma:generate",
