--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "postinstall": "npm run prisma:generate",
+    "start": "node dist/src/startServer.js",
     "dev": "bash ../../scripts/copy-libs.sh && bash ../../scripts/copy-meilisearch-to-api.sh && dotenv -e ../../env/.env -c -- ts-node-dev --respawn --inspect --inspect-port=9229 --project ./tsconfig.json src/startServer.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "bash ../../scripts/build-web-app.sh",
