create a layout structure

--- a/projects/desktop-app/tsconfig.json
+++ b/projects/desktop-app/tsconfig.json
@@ -13,7 +13,9 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
-    "target": "ES6"
+    "target": "ESNext",
+    "jsx": "react-jsx",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "src/web-app", "src/ui"],
