--- a/projects/desktop-app/tsconfig.json
+++ b/projects/desktop-app/tsconfig.json
@@ -18,7 +18,7 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "src/web-app", "src/ui"],
+  "exclude": ["node_modules", "src/web-app", "src/ui", "src/ui-src"],
   "formatCodeOptions": {
     "indentSize": 2,
     "tabSize": 2
