--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -34,6 +34,7 @@
     "graphql-yoga": "^3.5.1",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
+    "cors": "^2.8.5",
     "winston": "3.8.2",
     "fs-extra": "11.1.0",
     "lodash": "4.17.21",
@@ -55,6 +56,7 @@
     "@types/server-destroy": "1.0.1",
     "@types/cheerio": "^0.22.31",
     "@types/uuid": "^9.0.2",
+    "@types/cors": "^2.8.12",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5",
     "dotenv": "16.0.3",
