--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -74,6 +74,7 @@
     "i18next": "^23.7.3",
     "react-i18next": "^13.4.0",
     "antd": "^5.11.1",
+    "@ant-design/pro-components": "^2.6.48",
     "envalid": "^7.3.1",
     "dotenv": "16.3.1"
   },
