--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,8 +47,7 @@ jobs:
     # Platforms to build on/for
     strategy:
       matrix:
-        os: [macos-latest]
-        # os: [macos-latest, ubuntu-latest]
+        os: [macos-latest, ubuntu-latest]
         # os: [macos-latest, windows-latest, ubuntu-latest]
 
     steps:
