update UI with LoseConnection

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bookmark-intelligence",
-  "displayName": "Bookmark intelligence",
+  "name": "seekbot",
+  "displayName": "SeekBot",
   "version": "0.1.0",
   "description": "Automate capture bookmark website screenshots, save bookmark website content, and easy-to-find bookmarks with powerful search engine",
   "repository": "https://github.com/bitskyai/smart-bookmarks.git",
