--- a/projects/browser-extension/package.json
+++ b/projects/browser-extension/package.json
@@ -1,9 +1,9 @@
 {
   "name": "bi-browser-extension",
-  "displayName": "Bookmark Intelligence",
+  "displayName": "SeekBot - Make Life Productive",
   "private": true,
   "version": "0.1.0",
-  "description": "Automate capture bookmark website screenshots, save bookmark website content, and easy-to-find bookmarks with powerful search engine",
+  "description": "Automate capture bookmark website screenshots, save bookmark website content, and easy-to-find bookmarks with powerful search engine and chatbot.",
   "author": "help.bitskyai@gmail.com",
   "license": "GPL-3.0",
   "scripts": {
