--- a/env/.env.template
+++ b/env/.env.template
@@ -1,6 +1,6 @@
 # Application settings for the "local" development environment.
 
-APP_NAME=bookmark-intelligence
+APP_NAME=seekbot
 API_PORT=4000
 VERSION=1.0.0
 DESKTOP_MODE=4000
