--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "bitsky",
-  "productName": "Bitsky",
+  "name": "seekbot",
+  "productName": "SeekBot",
   "version": "1.0.0",
   "private": true,
-  "description": "Bitsky desktop app",
+  "description": "SeekBot desktop app",
   "main": "./dist/main/index.js",
   "scripts": {
     "tsc": "node ./scripts/tsc.js",
     "electron:start": "dotenv -e ../../env/.env -c -- electron-forge start",
     "dev": "dotenv -e ../../env/.env -c -- npm run build:webapp && npm run dev:watch",
-    "dev:ui": "dotenv -e ../../env/.env -c -- vite serve",
+    "dev:ui": "dotenv -e ../../env/.env -c -- vite serve --port 7777",
     "dev:watch": "dotenv -e ../../env/.env -c -- cross-env WATCH=true && bash ../../scripts/copy-libs.sh && rimraf ./dist && npm run tsc && cp -rf ./src/web-app ./dist/ && cp -rf ./src/ui ./dist/ && npm run electron:start",
     "build": "bash ../../scripts/build-desktop-app.sh",
     "build:ui": "tsc --project ./tsconfig-ui.json && vite build",
