--- a/env/.env.template
+++ b/env/.env.template
@@ -1,10 +1,15 @@
 # Application settings for the "local" development environment.
 
-APP_NAME=bookmark-intelligence
+APP_NAME=seekbot
 API_PORT=4000
 VERSION=1.0.0
-DESKTOP_MODE=4000
+DESKTOP_MODE=true
 DATABASE_URL=<Your-DB-URL> # "file:/Users/bitsky/bookmark-intelligence/projects/api/.bi-api/bi-api.db"
+DEBUG="prisma*"
+#VITE_API_URL="http://localhost:46997"
+SAVE_RAW_PAGE=true
+LOG_LEVEL=debug
 
 # Desktop App
 DESKTOP_VITE_DEV_SERVER_URL=http://localhost:7777
+
