--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -7,16 +7,16 @@
   "main": "./dist/main/index.js",
   "scripts": {
     "tsc": "node ./scripts/tsc.js",
-    "electron:start": "dotenv -e ../../env/.env -c -- electron-forge start",
-    "dev": "dotenv -e ../../env/.env -c -- npm run build:webapp && npm run dev:watch",
-    "dev:ui": "dotenv -e ../../env/.env -c -- vite serve --port 7777",
-    "dev:watch": "dotenv -e ../../env/.env -c -- cross-env WATCH=true && bash ../../scripts/copy-libs.sh && rimraf ./dist && npm run tsc && cp -rf ./src/web-app ./dist/ && cp -rf ./src/ui ./dist/ && npm run electron:start",
-    "build": "dotenv -e ../../env/.env -c -- bash ../../scripts/build-desktop-app.sh",
-    "build:ui": "dotenv -e ../../env/.env -c -- tsc --project ./tsconfig-ui.json && vite build",
-    "build:webapp": "dotenv -e ../../env/.env -c -- bash ../../scripts/build-web-app-to-desktop-app.sh",
-    "app:package": "dotenv -e ../../env/.env -c -- npm run build && electron-forge package",
-    "app:make": "dotenv -e ../../env/.env -c -- npm run build && electron-forge make --platform=darwin --verbose",
-    "app:publish": "dotenv -e ../../env/.env -c -- npm run build && electron-forge publish"
+    "electron:start": "electron-forge start",
+    "dev": "npm run build:webapp && npm run dev:watch",
+    "dev:ui": "vite serve --port 7777",
+    "dev:watch": "cross-env WATCH=true && bash ../../scripts/copy-libs.sh && rimraf ./dist && npm run tsc && cp -rf ./src/web-app ./dist/ && cp -rf ./src/ui ./dist/ && npm run electron:start",
+    "build": "bash ../../scripts/build-desktop-app.sh",
+    "build:ui": "tsc --project ./tsconfig-ui.json && vite build",
+    "build:webapp": "bash ../../scripts/build-web-app-to-desktop-app.sh",
+    "app:package": "npm run build && electron-forge package",
+    "app:make": "npm run build && electron-forge make --platform=darwin --verbose",
+    "app:publish": "npm run build && electron-forge publish"
   },
   "keywords": [],
   "author": {
