--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,7 +63,6 @@ jobs:
         run: echo ${{ secrets.MACOS_APPLICATION_CERTIFICATE }} | base64 --decode > certificate.p12
       - name: Decode Apple Install Application certificate
         run: echo ${{ secrets.MACOS_INSTALLER_CERTIFICATE }} | base64 --decode > install-certificate.p12
-
       - name: Install signing certificate
         run: |
           KEYCHAIN_PATH=build.keychain
@@ -73,7 +72,8 @@ jobs:
           security import certificate.p12 -k $KEYCHAIN_PATH -P ${{ secrets.MACOS_APPLICATION_CERTIFICATE_PASSWORD }} -T /usr/bin/codesign
           security import install-certificate.p12 -k $KEYCHAIN_PATH -P ${{ secrets.MACOS_INSTALLER_CERTIFICATE_PASSWORD }} -T /usr/bin/codesign
           security set-key-partition-list -S apple-tool:,apple: -s -k tmp-password $KEYCHAIN_PATH
-
+      - name: Verifying your certificate is installed
+        run: security find-identity -p codesigning -v
       - name: Build and Sign Electron app for macOS
         env:
           DEBUG: "*"
