Issue-71: implement osx code sign  (#78)
* remove load env

* install certification

* add step for Verifying your certificate is installed

* remove unused code

---------

Co-authored-by: neo <shaokexu@example.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,19 +59,29 @@ jobs:
         with:
           node-version: "16.x"
           registry-url: https://registry.npmjs.org/
+      - name: Decode Apple Application certificate
+        run: echo ${{ secrets.MACOS_APPLICATION_CERTIFICATE }} | base64 --decode > certificate.p12
+      - name: Decode Apple Install Application certificate
+        run: echo ${{ secrets.MACOS_INSTALLER_CERTIFICATE }} | base64 --decode > install-certificate.p12
+      - name: Install signing certificate
+        run: |
+          KEYCHAIN_PATH=build.keychain
+          security create-keychain -p tmp-password $KEYCHAIN_PATH
+          security default-keychain -s $KEYCHAIN_PATH
+          security unlock-keychain -p tmp-password $KEYCHAIN_PATH
+          security import certificate.p12 -k $KEYCHAIN_PATH -P ${{ secrets.MACOS_APPLICATION_CERTIFICATE_PASSWORD }} -T /usr/bin/codesign
+          security import install-certificate.p12 -k $KEYCHAIN_PATH -P ${{ secrets.MACOS_INSTALLER_CERTIFICATE_PASSWORD }} -T /usr/bin/codesign
+          security set-key-partition-list -S apple-tool:,apple: -s -k tmp-password $KEYCHAIN_PATH
+      - name: Verifying your certificate is installed
+        run: security find-identity -p codesigning -v
       - name: Build and Sign Electron app for macOS
         env:
-          APPLE_CERTIFICATE: ${{ secrets.MACOS_APPLICATION_CERTIFICATE }}
-          APPLE_CERTIFICATE_PASSWORD: ${{ secrets.MACOS_APPLICATION_CERTIFICATE_PASSWORD }}
+          DEBUG: "*"
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
         run: |
-          echo "$APPLE_CERTIFICATE" | base64 --decode > certificate.p12
           npm run release:desktop-app
-
-      # - name: Build
-      #   run: npm run release:desktop-app
       - name: List generate files
         run: cd ./projects/desktop-app/out && ls
       - name: Get Release
