fix dark mode issue and remove bookmark and star header

--- a/projects/api/package.json
+++ b/projects/api/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "postinstall": "npm run prisma:generate",
     "start": "node dist/src/start.js",
-    "dev": "bash ../../scripts/copy-libs.sh && bash ../../scripts/copy-meilisearch-to-api.sh && dotenv -e ../../env/.env -c -- ts-node-dev --respawn --inspect --inspect-port=9229 --project ./tsconfig.json src/startServer.ts",
+    "dev": "bash ../../scripts/copy-libs.sh && bash ../../scripts/copy-meilisearch-to-api.sh && dotenv -e ../../env/.env -c -- ts-node-dev --respawn --inspect --inspect-port=9229 --project ./tsconfig.json src/start.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "bash ../../scripts/build-web-app.sh",
     "prisma:generate": "dotenv -e ../../env/.env -c -- prisma generate",
