--- a/projects/browser-extension/package.json
+++ b/projects/browser-extension/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bi-browser-extension",
+  "name": "seekbot-browser-extension",
   "displayName": "SeekBot",
   "private": true,
   "version": "0.3.0",
