Issue-76:If a user didn't install browser extension before, then in the dashboard page add introduction and link of browser extensions (#80)
* instead of get extensions in desktop ui, change to cache extension information in the desktop app

* reimplement the way how to get browser extensions

* implement remove extension

* change the browser extension to use local storage instead of sync storage to avoid read and write limit

* implement product tour

* remove "

* finish first version of product tour

* listen to key type and send userInteraction

---------

Co-authored-by: neo <shaokexu@example.com>

--- a/projects/browser-extension/package.json
+++ b/projects/browser-extension/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "bi-browser-extension",
-  "displayName": "SeekBot - Make Life Productive",
+  "name": "seekbot-browser-extension",
+  "displayName": "SeekBot",
   "private": true,
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Your personal data assistant who organize your browser information, making your data accessible through AI-powered search engine",
   "author": "help.bitskyai@gmail.com",
   "license": "GPL-3.0",
