--- a/projects/desktop-app/package.json
+++ b/projects/desktop-app/package.json
@@ -29,6 +29,7 @@
     "@electron-forge/maker-rpm": "^7.2.0",
     "@electron-forge/maker-squirrel": "^7.2.0",
     "@electron-forge/maker-zip": "^7.2.0",
+    "@electron-forge/maker-dmg": "^7.2.0",
     "@electron/osx-sign": "^1.0.5",
     "electron": "27.0.4",
     "node-loader": "^2.0.0",
