--- a/projects/browser-extension/package.json
+++ b/projects/browser-extension/package.json
@@ -2,7 +2,7 @@
   "name": "seekbot-browser-extension",
   "displayName": "SeekBot",
   "private": true,
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Your personal data assistant who organize your browser information, making your data accessible through AI-powered search engine",
   "author": "help.bitskyai@gmail.com",
   "license": "GPL-3.0",
@@ -57,7 +57,8 @@
       "history",
       "tabs",
       "storage",
-      "activeTab"
+      "activeTab",
+      "unlimitedStorage"
     ]
   }
 }
